# emlx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  mix.exs
c_src/: mlx_nif.cpp  mlx_nif_resource.hpp  nif_utils.cpp
lib/: emlx.ex  mlx_nif.ex
test/: emlx_test.exs
